tests/integration/pilot/test_artifacts/pilot-058a94968f114a619ba739812/TestTraffic/use-client-protocol/use_client_protocol_with_h2/_test_context/DestinationRule.496215995.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: use-client-protocol
  namespace: echo-2-98059
spec:
  host: c
  trafficPolicy:
    connectionPool:
      http:
        useClientProtocol: true
    tls:
      mode: DISABLE
